# feature_comparison

./: CMakeLists.txt
CudaSift/data/: limg_pts.pgm
src/: featureComparison.cpp
